# cfs

./: CMakeLists.txt  README.md
include/Cfs/: Core.hpp  Submodule.hpp
include/Cfs/helpers/: log.hpp  mode.hpp  threadhandler.hpp
include/Cfs/modules/: AntennaDeployer.hpp
src/: main.cpp
src/core/: core.cpp
src/helpers/: log.cpp
src/modules/: AntennaDeployer.cpp
